--- a/FI/consumers.properties
+++ b/FI/consumers.properties
@@ -21,30 +21,12 @@
 # If defined, also overrides setting from consumer-gateway.properties
 #  x.wrappers=
 
-0.id=FI_PILOT.GOV.1019125-0.Demo2Service.getOrganizationList.v1
-0.id.client=FI_PILOT.GOV.0245437-2.ConsumerTest
-0.path=/www.hel.fi/palvelukarttaws/rest/v2/organization/
+0.id=FI_PILOT.GOV.0313471-7.FinnaFinto.fintoService.v1
+0.path=/api.finto.fi/rest/v1/search/
 0.verb=get
-1.id=FI_PILOT.GOV.1019125-0.Demo2Service.getOrganization.v1
-1.path=/www.hel.fi/palvelukarttaws/rest/v2/organization/{resourceId}
+1.id=FI_PILOT.GOV.0313471-7.FinnaFinto.finnaSearchService.v1
+1.path=/api.finna.fi/v1/search/
 1.verb=get
-2.id=FI_PILOT.GOV.1019125-0.Demo2Service.getLibrary.v1
-2.path=/api.kirjastot.fi/v3/organisation/
+2.id=FI_PILOT.GOV.0313471-7.FinnaFinto.finnaRecordService.v1
+2.path=/api.finna.fi/v1/record/
 2.verb=get
-3.id=FI_PILOT.GOV.1019125-0.Demo2Service.searchCompany.v1
-3.path=/avoindata.prh.fi/opendata/bis/v1/
-3.verb=get
-3.response.modurl=true
-4.id=FI_PILOT.GOV.1019125-0.Demo2Service.getCompany.v1
-4.path=/avoindata.prh.fi/opendata/bis/v1/{resourceId}
-4.verb=get
-4.response.modurl=true
-5.id=FI_PILOT.GOV.1019125-0.Demo2Service.fintoService.v1
-5.path=/api.finto.fi/rest/v1/search/
-5.verb=get
-6.id=FI_PILOT.GOV.1019125-0.Demo2Service.finnaSearchService.v1
-6.path=/api.finna.fi/v1/search/
-6.verb=get
-7.id=FI_PILOT.GOV.1019125-0.Demo2Service.finnaRecordService.v1
-7.path=/api.finna.fi/v1/record/
-7.verb=get
