--- a/FI/providers.properties
+++ b/FI/providers.properties
@@ -38,13 +38,13 @@
 # request parameter values. Operation is executed if and only if request 
 # parameter value matches the condition.
 #  z.reqParamValueFilterOperation=
-0.id=FI_PILOT.GOV.0313471-7.Demo2Service.fintoService.v1
+0.id=FI_PILOT.GOV.0313471-7.FinnaFinto.fintoService.v1
 0.url=http://api.finto.fi/rest/v1/search
-1.id=FI_PILOT.GOV.0313471-7.Demo2Service.finnaSearchService.v1
+1.id=FI_PILOT.GOV.0313471-7.FinnaFinto.finnaSearchService.v1
 1.url=https://api.finna.fi/v1/search
 1.reqParamNameFilterCondition=(facet|facetFilter|field|filter)
 1.reqParamNameFilterOperation=$1[]
-2.id=FI_PILOT.GOV.0313471-7.Demo2Service.finnaRecordService.v1
+2.id=FI_PILOT.GOV.0313471-7.FinnaFinto.finnaRecordService.v1
 2.url=https://api.finna.fi/v1/record
 2.reqParamNameFilterCondition=(id|field)
 2.reqParamNameFilterOperation=$1[]
